[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Bot.gd" type="Script" id=2]
[ext_resource path="res://entities/BotGun.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[node name="Bot" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Debug" type="Node2D" parent="."]

[node name="Target" type="Sprite" parent="Debug"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="MoveIntention" type="RayCast2D" parent="Debug"]

[node name="Legs" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Legs"]
scale = Vector2( 0.376, 0.376 )
texture = ExtResource( 1 )

[node name="Top" type="Node2D" parent="."]

[node name="LeftGun" parent="Top" instance=ExtResource( 3 )]
position = Vector2( -7, -9 )

[node name="RightGun" parent="Top" instance=ExtResource( 3 )]
position = Vector2( -7, 9 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )

[node name="Navigation" type="NavigationAgent2D" parent="."]
path_desired_distance = 14.0
target_desired_distance = 16.0
path_max_distance = 50.0
avoidance_enabled = true
radius = 30.0
max_speed = 300.0
